--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,3 +17,6 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    # Another secret key used to encrypt database keys
+    core_labs_crypto_key:  ThisTokenIsNotSoSecretChangeIt
